--- a/requirements.txt
+++ b/requirements.txt
@@ -14,4 +14,6 @@ python-jose==3.3.0
 passlib==1.7.4
 python-multipart==0.0.6
 prometheus-client==0.17.1
-loguru==0.7.2 
+loguru==0.7.2
+websockets==11.0.3
+mitmproxy==10.1.5 
